@@ -59,6 +59,8 @@ Version 1.11.0+svn:
      attacks (not just swarm).
    * Active/inactive highlighting for abilities and weapon specials in the
      sidebar.
+   * The "repeat recruit" command now refers to the last recruit by the current
+     side, rather than the last recruit by the current game client.
 
  * Whiteboard
    * Don't end turn if executing all actions in another way than using the
