@@ -63,6 +63,8 @@ Version 1.11.0+svn:
    * Active/inactive highlighting for abilities and weapon specials in the
      sidebar.
    * Fix broken MP game creation dialog on low resolutions
+   * The "repeat recruit" command now refers to the last recruit by the current
+     side, rather than the last recruit by the current game client.
  * Whiteboard
    * Don't end turn if executing all actions in another way than using the
      "end turn" button/hotkey. (bug #19901)
